@@ -14,3 +14,4 @@ case "$sys" in
   *) echo 'ranlib "$main.a"'
     ;;
 esac
+
