@@ -1,15 +1,23 @@
 #!/bin/sh
 echo 'main="$1"; shift';
 sys="`uname -s | tr '/:[A-Z]' '..[a-z]'`"
+suf="`./sosuffix`"
 
+echo 'suf='"${suf}"
 case "$sys" in
   sunos)
-    echo 'rm -f "$main.so"'
-    echo 'ld -G -z text -o "$main.so" ${1+"$@"}';;
+    echo 'rm -f "${main}.${suf}"'
+    echo 'ld -G -z text -o "${main}.${suf}" ${1+"$@"}';;
   darwin)
-    echo 'rm -f "$main.dylib"'
-    echo 'libtool -dynamic -o "$main.dylib" ${1+"$@"} -lc';;
+    echo 'rm -f "${main}.${suf}"'
+    echo 'libtool -dynamic -o "${main}.${suf}" ${1+"$@"} -lc';;
   *)
-    echo 'rm -f "$main.so"'
-    echo 'gcc -shared -Wl,-soname,"$main.so" -o "$main.so" ${1+"$@"} -lc';;
+    echo 'rm -f "${main}.${suf}"'
+    echo 'cc -shared -Wl,-soname,"${main}.${suf}" -o "${main}.${suf}" ${1+"$@"} -lc';;
 esac
+
+echo 'if [ $? -ne 0 ]'
+echo 'then'
+echo '  exit 1'
+echo 'fi'
+echo 'echo ${main}.${suf} >> ${main}.lib'
