@@ -87,3 +87,4 @@
 20060507 code: updated to cpj-genmk-0.6
 20060507 code: added sysmath-libs and conf-ldfflist
 20060507 version: corelib-0.31
+20060510 code: updated to cpj-genmk-0.7
